--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -22,7 +22,7 @@ tasks:
       - go fmt ./...
 
 # 
-  integration-test:
+  integration-tests:
     cmds:
       - docker compose up -d db
       - go test -tags=integration -v ./...
