--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,4 +40,4 @@ jobs:
       uses: arduino/setup-task@v1
 
     - name: Run integration tests
-      run: integration-tests
+      run: task integration-tests
