--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -24,7 +24,7 @@ tasks:
 # 
   integration-tests:
     cmds:
-      #- docker compose up -d db
+      ##- docker compose up -d db
       - go test -tags=integration -v ./...
     env:
       DB_USERNAME: postgres
